manifests/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    k8s.v1.cni.cncf.io/networks: '[{ "name": "ipvlan-1085" }]'
  name: pod-1085
  namespace: gogs-helm
spec:
  containers:
    - name: httpd
      image: 'image-registry.openshift-image-registry.svc:5000/openshift/cli:latest'
      command:
        - sh
        - '-c'
        - tail -f /dev/null
  nodeSelector:
    kubernetes.io/hostname: ocp1-bm4nq-worker-wmpwz
