manifests/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: multus-http
  namespace: tenant1085-ns1
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
  selector:
    app: multus-http
---
kind: Service
apiVersion: v1
metadata:
  name: multus-http
  namespace: tenant1085-ns2
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
  selector:
    app: multus-http
---
kind: Service
apiVersion: v1
metadata:
  name: multus-http
  namespace: tenant1081-ns1
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
  selector:
    app: multus-http
---
kind: Service
apiVersion: v1
metadata:
  annotations:
    traffic-policy.network.alpha.openshift.io/local-with-fallback: ''
  name: router-tenant1085-lb
  namespace: openshift-ingress
  labels:
    app: router
    ingresscontroller.operator.openshift.io/owning-ingresscontroller: tenant1085
    router: router-tenant1085
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
  externalIPs:
    - 10.6.85.196
    - 10.6.85.197
  allocateLoadBalancerNodePorts: false
  type: LoadBalancer
  selector:
    ingresscontroller.operator.openshift.io/deployment-ingresscontroller: tenant1085
---
kind: Service
apiVersion: v1
metadata:
  annotations:
    traffic-policy.network.alpha.openshift.io/local-with-fallback: ''
  name: router-tenant1081-lb
  namespace: openshift-ingress
  labels:
    app: router
    ingresscontroller.operator.openshift.io/owning-ingresscontroller: tenant1081
    router: router-tenant1081
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
  externalIPs:
    - 10.6.81.196
    - 10.6.81.197
  allocateLoadBalancerNodePorts: false
  type: LoadBalancer
  selector:
    ingresscontroller.operator.openshift.io/deployment-ingresscontroller: tenant1081
