manifests/routes.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: multus-http
  namespace: tenant1085-ns1
spec:
  host: multus-http-tenant1085-ns1.tenant1085.ocp1.redhat.hpecic.net
  to:
    kind: Service
    name: multus-http
    weight: 100
  port:
    targetPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: multus-http
  namespace: tenant1085-ns2
spec:
  host: multus-http-tenant1085-ns2.tenant1085.ocp1.redhat.hpecic.net
  to:
    kind: Service
    name: multus-http
    weight: 100
  port:
    targetPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: multus-http
  namespace: tenant1081-ns1
spec:
  host: multus-http-tenant1081-ns1.tenant1081.ocp1.redhat.hpecic.net
  to:
    kind: Service
    name: multus-http
    weight: 100
  port:
    targetPort: 8080
